Add layout and localization (#3)
* Add layout and localization
* Fix slider round error

--- a/src/Shredder-S/makefile
+++ b/src/Shredder-S/makefile
@@ -7,7 +7,7 @@
 ## Application Specific Settings ---------------------------------------------
 
 # specify the name of the binary
-NAME= Shredder-S
+NAME= Shredder
 
 # specify the type of binary
 #	APP:	Application
@@ -58,7 +58,7 @@ RSRCS=
 #		naming scheme you need to specify the path to the library
 #		and it's name
 #		library: my_lib.a entry: my_lib.a or path/my_lib.a
-LIBS= be tracker $(STDCPPLIBS)
+LIBS= be localestub tracker $(STDCPPLIBS)
 
 #	specify additional paths to directories following the standard
 #	libXXX.so or libXXX.a naming scheme.  You can specify full paths
@@ -103,7 +103,7 @@ SYMBOLS = FALSE
 #	specify debug settings
 #	if TRUE will allow application to be run from a source-level
 #	debugger.  Note that this will disable all optimzation.
-DEBUGGER = FALSE
+DEBUGGER = 
 
 #	specify additional compiler flags for all files
 COMPILER_FLAGS = 
